certification is complete, logo is added
certification is complete, logo is added

--- a/template_sassland/saasland/droitthemes.com/html/saasland/home-startup.html
+++ b/template_sassland/saasland/droitthemes.com/html/saasland/home-startup.html
@@ -101,7 +101,7 @@
         <header class="header_area header-scrolled">
             <nav class="navbar navbar-expand-lg menu_one menu_four">
                 <div class="container">
-                    <a class="navbar-brand sticky_logo" href="#"><img src="img/logo2.png" srcset="img/logo2x-2.png 2x" alt="logo"><img src="img/logo.png" srcset="img/logo2x.png 2x" alt=""></a>
+                    <a class="navbar-brand sticky_logo" href="#"><img src="img/rsz_3company_logo.png" srcset="img/rsz_3company_logo.png" alt="logo"><img src="img/rsz_3company_logo.png" srcset="img/rsz_3company_logo.png" alt=""></a>
                     <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="menu_toggle">
                             <span class="hamburger">
@@ -117,9 +117,9 @@
                     </button>
 
                     <div class="collapse navbar-collapse justify-content-between" id="navbarSupportedContent">
-                        <ul class="navbar-nav menu w_menu pl_100">
+                        <ul class="navbar-nav menu w_menu pl_50">
                             <li class="nav-item dropdown submenu">
-                                <a class="nav-link dropdown-toggle" href="#" role="button" aria-haspopup="true" aria-expanded="false">
+                                <a class="nav-link dropdown-toggle" href="#home" role="button" aria-haspopup="true" aria-expanded="false">
                                     Home
                                 </a>
                                 
@@ -179,7 +179,7 @@
             </nav>
         </header>
 
-        <section class="agency_banner_area_two">
+        <section id="home" class="agency_banner_area_two">
             <div class="dot_shap one"></div>
             <div class="dot_shap two"></div>
             <div class="dot_shap three"></div>
@@ -312,49 +312,67 @@
                     </div>
                 </div>
             </div>
+			
 		
         </section>
 
         <section class="agency_featured_area agency_featured_area_two  bg_color">
+		<h2 class="f_size_30 f_600 t_color3 l_height40 text-center mb_90 wow fadeInDown" data-wow-delay="0.7s">Our Affilation & Certifications</h2>
             <div class="container">
-                <h2 class="f_size_30 f_600 t_color3 l_height40 text-center wow fadeInUp" data-wow-delay="0.1s">You SaasLand wherever your<br> business agency</h2>
-                <div class="features_info feature_info_two">
-                    <img class="dot_img" src="img/home8/dot.png" alt="">
+			
+                <div class="features_info">
+                    <img class="dot_img" src="img/process/divider.png" alt="">
                     <div class="row agency_featured_item flex-row-reverse">
                         <div class="col-lg-6">
-                            <div class="agency_featured_img text-right wow fadeInRight" data-wow-delay="0.2s">
-                                <img src="img/home4/work1.png" alt="">
+                            <div class="agency_featured_img text-left wow fadeInRight" data-wow-delay="0.2s">
+                                <img src="img/home4/basis1.png" alt="">
                             </div>
                         </div>
                         <div class="col-lg-6">
                             <div class="agency_featured_content pr_70 pl_70 wow fadeInLeft" data-wow-delay="0.4s">
                                 <div class="dot"><span class="dot1"></span><span class="dot2"></span></div>
-                                <img class="number" src="img/home4/icon01.png" alt="">
-                                <h3>With efficiency to unlock more opportunities</h3>
-                                <p>Why I say old chap that is spiffing bodge, blag pardon me buggered mufty Oxford butty bubble and squeak wind up, brown bread the full monty bloke ruddy cras tickety-boo squiffy. Starkers dropped a clanger lurgy is cack excuse my French what a plonker blower.!</p>
-                                <a href="#" class="icon mt_30"><i class="ti-arrow-right"></i></a>
+                                <h2 class="f_size_30 f_600 t_color3 l_height40 wow fadeInUp" data-wow-delay="0.1s">Affilation</h2>
+                                <p>Bangladesh Association of Software and Information Services (BASIS) is the national trade body for Software & IT Enabled Service industry of Bangladesh. Established in 1997, the association has been working with a vision of developing vibrant software & IT service industry in the country. BASIS started its journey with only 17 charter members. Today the membership stands more than eleven hundred. Members of BASIS account for the lion share of the total software & IT services revenue of the country.</p>
+                                <a href="https://basis.org.bd/company-profile/A754" target="_blank" class="icon mt_30"><i class="ti-arrow-right"></i></a>
                             </div>
                         </div>
                     </div>
                     <div class="row agency_featured_item agency_featured_item_two">
                         <div class="col-lg-6">
                             <div class="agency_featured_img text-right wow fadeInLeft" data-wow-delay="0.2s">
-                                <img src="img/home8/service_item_03.png" alt="">
+                                <img src="img/home8/iso9001 1.png" alt="">
                             </div>
                         </div>
                         <div class="col-lg-6">
                             <div class="agency_featured_content pl_100 wow fadeInRight" data-wow-delay="0.4s">
                                 <div class="dot"><span class="dot1"></span><span class="dot2"></span></div>
+                                
+                                <h2 class="f_size_30 f_600 t_color3 l_height40 wow fadeInUp" data-wow-delay="0.1s">Certification</h2>
+								<img class="number" src="img/home4/icon01.png" alt="">
+                                <p><b>ISO 9000:2015</b> describes the fundamental concepts and principles of quality management which are universally applicable. ISO 9000:2015 specifies the terms and definitions that apply to all quality management and quality management system standards developed by ISO/TC 176.</p>
+                                <a href="https://www.iso.org/standard/45481.html" target="_blank" class="icon mt_30"><i class="ti-arrow-right"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row agency_featured_item flex-row-reverse">
+                        <div class="col-md-6">
+                            <div class="agency_featured_img text-right">
+                                <img src="img/home8/iso27001 1.png" alt="">
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="agency_featured_content pr_70 pl_70">
+                                <div class="dot"><span class="dot1"></span><span class="dot2"></span></div>
                                 <img class="number" src="img/home4/icon02.png" alt="">
-                                <h3>Wuth instant data to keep everyone in the know</h3>
-                                <p>Why I say old chap that is spiffing bodge, blag pardon me buggered mufty Oxford butty bubble and squeak wind up, brown bread the full monty bloke ruddy cras tickety-boo squiffy. Starkers dropped a clanger lurgy is cack excuse my French what a plonker blower.!</p>
-                                <a href="#" class="icon mt_30"><i class="ti-arrow-right"></i></a>
+                                <p><b>ISO/IEC 27001:2013</b> specifies the requirements for establishing, implementing, maintaining and continually improving an information security management system within the context of the organization. It also includes requirements for the assessment and treatment of information security risks tailored to the needs of the organization. The requirements set out in ISO/IEC 27001:2013 are generic and are intended to be applicable to all organizations, regardless of type, size or nature.</p>
+                                <a href="https://www.iso.org/standard/54534.html" target="_blank" class="icon mt_30"><i class="ti-arrow-right"></i></a>
                             </div>
                         </div>
                     </div>
                     <div class="dot middle_dot"><span class="dot1"></span><span class="dot2"></span></div>
                 </div>
             </div>
+		
         </section>
         <section class="fun_fact_area fun_fact_area_two">
             <div class="container">
