counter up plugin
counter up plugin is added in trusted section

--- a/template_sassland/saasland/droitthemes.com/html/saasland/home-startup.html
+++ b/template_sassland/saasland/droitthemes.com/html/saasland/home-startup.html
@@ -24,6 +24,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
 	
+	
 </head>
 
 <body>
@@ -194,7 +195,7 @@
                             <h2 class="f_700 f_size_40 l_height50 w_color mb_20 wow fadeInRight" data-wow-delay="0.3s">YOUR COMPREHENSIVE TECHNOLOGY SOLUTIONS PROVIDER</h2>
                             <p class="f_400 w_color l_height28 wow fadeInRight" data-wow-delay="0.4s">We work as the bridge between the customer and the supplier or integrator to ensure a seamless transition</p>
                             <div class="action_btn d-flex align-items-center mt_40 wow fadeInRight" data-wow-delay="0.6s">
-                                <a href="#services" class="btn_hover agency_banner_btn">Begin Today</a>
+                                <a  href="#services" class="btn_hover agency_banner_btn">Begin Today</a>
                             </div>
                         </div>
                     </div>
@@ -403,19 +404,19 @@
                             <p class="f_400 f_size_15 l_height28 mb_40">Why I say old chap that is spiffing barney, nancy boy bleeder chimney pot Richard cheers the little rotter so I said, easy peasy buggered blower bevvy A bit of how's your father he nicked it arse over tit. </p>
                             <div class="d-flex text-center">
                                 <div class="fact_item ">
-                                    <h1 class="t_color3">23</h1>
+                                    <h1 class="t_color3"><span class="counter">23</span></h1>
                                     <p class="mb-0">Clients<br>Attached</p>
                                 </div>
                                 <div class="fact_item pl_100">
-                                    <h1 class="t_color3">59</h1>
+                                    <h1 class="t_color3"><span class="counter">59</span></h1>
                                     <p class="mb-0">Projects<br>We Done</p>
                                 </div>
 								<div class="fact_item pl_100">
-                                    <h1 class="t_color3">2,864</h1>
+                                    <h1 class="t_color3"><span class="counter">2,864</span></h1>
                                     <p class="mb-1">Hours<br> Of Support</p>
                                 </div>
                                 <div class="fact_item pl_100">
-                                    <h1 class="t_color3">32</h1>
+                                    <h1 class="t_color3"><span class="counter">32</span></h1>
                                     <p>Hard Workers</p>
                                 </div>
                             </div>
@@ -919,6 +920,7 @@
     </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="js/jquery-3.2.1.min.js"></script>
     <script src="js/propper.js"></script>
     <script src="js/bootstrap.min.js"></script>
@@ -934,6 +936,11 @@
     <script src="js/plugins.js"></script>
     <script src="js/main.js"></script>
 	<script src="js/jquery.nav.js"></script>
+	
+	
+	
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js" integrity="sha512-CEiA+78TpP9KAIPzqBvxUv8hy41jyI3f2uHi7DGp/Y/Ka973qgSdybNegWFciqh6GrN2UePx2KkflnQUbUhNIA==" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/Counter-Up/1.0.0/jquery.counterup.min.js" integrity="sha512-d8F1J2kyiRowBB/8/pAWsqUl0wSEOkG5KATkVV4slfblq9VRQ6MyDZVxWl2tWd+mPhuCbpTB4M7uU/x9FlgQ9Q==" crossorigin="anonymous"></script>
 	<!-- contact js -->
     <script src="js/jquery.form.js"></script>
     <script src="js/jquery.validate.min.js"></script>
@@ -941,9 +948,11 @@
     <script src="js/main.js"></script>
 	
 	<script>
+		
 		$(document).ready(function() {
 			$('#nav').onePageNav();
 		});
+		
 	</script>
 </body>
 
