make responsive for ipad and ipad pro
make responsive for ipad and ipad pro

--- a/index.html
+++ b/index.html
@@ -328,14 +328,14 @@
 		
 		<!-- Certification Section Start -->
         <section id="about" class="agency_featured_area agency_featured_area_two  bg_color">
-		<h2 class="f_size_30 f_600 t_color3 l_height40 text-center mb-50 wow fadeInDown" data-wow-delay="0.7s">Our Affilation & Certifications</h2>
+		<h2 class="f_size_30 f_600 t_color3 l_height40 text-center mb_31 wow fadeInDown" data-wow-delay="0.7s">Our Affilation & Certifications</h2>
             <div class="container">
 			
                 <div class="features_info">
                     <img class="dot_img" src="img/divider.png" alt="">
                     <div class="row agency_featured_item flex-row-reverse">
                         <div class="col-lg-6">
-                            <div class="agency_1featured_img text-left wow fadeInRight basisLogo27001" data-wow-delay="0.2s">
+                            <div class="agency_1featured_img text-left wow fadeInRight  basisLogo" data-wow-delay="0.2s">
                                 <img src="img/basis1.png" alt="">
                             </div>
                         </div>
@@ -365,15 +365,16 @@
                             </div>
                         </div>
                     </div>
-                    <div class="row agency_featured_item flex-row-reverse">
-                        <div class="col-md-6">
+                    <div class="row agency_featured_item flex-row-reverse agency_featured_item_second">
+                        <div class="col-lg-6">
                             <div class="agency_featured_img basisLogo27001 wow fadeInRight" data-wow-delay="0.2s">
                                 <img src="img/iso27001 1.png" alt="">
                             </div>
                         </div>
-                        <div class="col-md-6">
+                        <div class="col-lg-6">
                             <div class="agency_featured_content pr_70 pl_70 wow fadeInLeft" data-wow-delay="0.4s">
                                 <div class="dot"><span class="dot1"></span><span class="dot2"></span></div>
+                                <h2 class="f_size_30 f_600 t_color3 l_height40 wow fadeInUp" data-wow-delay="0.1s">Certification</h2>
                                 <img class="number" src="img/icon02.png" alt="">
                                 <p><b>ISO/IEC 27001:2013</b> specifies the requirements for establishing, implementing, maintaining and continually improving an information security management system within the context of the organization. It also includes requirements for the assessment and treatment of information security risks tailored to the needs of the organization. The requirements set out in ISO/IEC 27001:2013 are generic and are intended to be applicable to all organizations, regardless of type, size or nature.</p>
                                 <a href="https://www.iso.org/standard/54534.html" target="_blank" class="icon mt_30"><i class="ti-arrow-right"></i></a>
@@ -840,13 +841,13 @@
                     </div>
                     <div class="col-lg-8 offset-lg-1">
                         <div class="mapbox">
-                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3648.614220695959!2d90.39986951486293!3d23.8678289901973!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3755c428bfffffff%3A0x73c88cb5416a457e!2sTechnometrics%20Limited!5e0!3m2!1sen!2sbd!4v1594022973935!5m2!1sen!2sbd" width="750" height="380" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3648.614220695959!2d90.39986951486293!3d23.8678289901973!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3755c428bfffffff%3A0x73c88cb5416a457e!2sTechnometrics%20Limited!5e0!3m2!1sen!2sbd!4v1594022973935!5m2!1sen!2sbd" width="100%" height="100%" frameborder="5" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
                         </div>
                     </div>
                 </div>
                 <div class="contact_form">
                     <h2 class="f_p f_size_22 t_color3 f_600 l_height28 mt_100 mb_40">Leave a Message</h2>
-                    <form action="https://formspree.io/xzbjjwjg" class="contact_form_box" method="post" id="contactForm" novalidate="novalidate">
+                    <form action="https://formspree.io/mjvaaaaw" class="contact_form_box" method="post" id="contactForm" novalidate="novalidate">
                         <div class="row">
                             <div class="col-lg-6">
                                 <div class="form-group text_box">
@@ -897,7 +898,7 @@
                         <div class="col-sm-2">
                             
                                 <h3 class="f-title f_600 t_color2 f_size_18 mb_20 pl_10" >Follow Us</h3>
-                                <div class="f_social_icon mb_50" style="margin-right: 30px">
+                                <div class="f_social_icon mb_50" style="margin-right: 0px">
                                     <a  href="https://www.facebook.com/technometrics.net" target="_blank" class="ti-facebook"></a>
                                     <a  href="https://www.linkedin.com/company/technometrics-limited" target="_blank" class="ti-linkedin"></a>
                                 </div>
